<resources>
    <string name="app_name">白板</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>
    <string name="delete">删除</string>
    <string name="hints">提示</string>
    <string name="openFileFailedDefaultText">文件加载失败，请取消后重试！</string>
    <string name="openFile">打开文件</string>
    <string name="loading">正在加载...</string>
    <string name="savePosition">已保存至:</string>
    <string name="openFilePosition">打开文件</string>
    <string name="switchSaveDevice">选择存放设备</string>
    <string name="save">保存</string>
    <string name="fileName">文件名:</string>
    <string name="fileDirName">文件夹名</string>
    <string name="fileSaveTo">文件保存至:</string>
    <string name="sendMail">邮件分享</string>
    <string name="send">发送</string>
    <string name="style">主题</string>
    <string name="receiver">收件人</string>
    <string name="receiverAdrHint">请输入收件人邮箱，多个收件人按回车键分隔</string>
    <string name="erase">擦除</string>
    <string name="areaErase">区域清除</string>
    <string name="clrearScreen">全屏清除</string>
    <string name="rotateLeft">左旋转</string>
    <string name="rotateRight">右旋转</string>
    <string name="heightSelf">高度自适</string>
    <string name="widthSelf">宽度自适</string>
    <string name="oneToOne">原尺寸</string>
    <string name="scanQRDownload">扫码下载</string>
    <string name="changeBg">更换背景</string>
    <string name="exit">退出</string>
    <string name="saveAll">保存全部白板</string>
    
    <string name="qr_text1">请先连接</string>
    <string name="qr_text2">无线热点</string>
    <string name="qr_text3">，再扫描二维码</string>
    <string name="qr_text4">再扫描二维码下载白板内容</string>

    <string name="setting">设置</string>
    <string name="networkUnusable">网络未连接，请检查网络设置！</string>

    <string name="close">关闭</string>

    <string name="saveHint">保存中...</string>

    <string name="delAllWb">删除所有白板</string>
    <string name="isDelAllWb">确认删除所有白板</string>

    <string name="keepUsing">继续使用</string>
    <string name="exitWb">退出白板</string>
    
    <string name="notSave">不保存</string>

    <string name="rmt_dc_dialog_hint">是否保存白板中的协作内容！</string>

    <string name="talk">讨论</string>
    <string name="speaker">主讲</string>
    <string name="collaborationMode">协作方式</string>
    <string name="releaseManagementRight">释放管理权</string>
    <string name="dcsmnger_interface2_hint">确认释放协作和会议的管理权吗？</string>

    <string name="quitDataConf">退出数据协作</string>
    <string name="overDataConf">结束数据协作</string>


    <string-array name="bgName">
        <item>网格</item>
        <item>绅士蓝</item>
        <!--
        <item>贵族金</item>
        -->
        <item>太空灰</item>
        <item>黑板绿</item>
        <!--
        <item>典雅银</item>
        -->
    </string-array>


    <string name="test_page_num">10/20</string>

</resources>
